setup db and related gems

--- a/config/database.yml
+++ b/config/database.yml
@@ -6,14 +6,14 @@
 # And be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 development:
-  adapter: mysql2
+  adapter: mysql
   encoding: utf8
   reconnect: false
-  database: clip_development
+  database: clip
   pool: 5
   username: root
   password:
-  socket: /var/run/mysqld/mysqld.sock
+  host: localhost
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -22,7 +22,7 @@ test:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: clip_test
+  database: clip
   pool: 5
   username: root
   password:
@@ -32,7 +32,7 @@ production:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: clip_production
+  database: clip
   pool: 5
   username: root
   password:
