--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,7 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: mysql2
+  adapter: mysql
   encoding: utf8
   reconnect: false
   database: clip
@@ -29,7 +29,7 @@ test:
   socket: /var/run/mysqld/mysqld.sock
 
 production:
-  adapter: mysql2
+  adapter: mysql
   encoding: utf8
   reconnect: false
   database: clip
